--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "electron-navigation": "^1.5.8",
     "escape-html": "^1.0.3",
     "react": "^16.5.2",
+    "react-billboardjs": "^1.4.3",
     "react-highlight": "^0.12.0",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "svg-inline-loader": "^0.8.0"
   }
 }
